update QR
